# metaplex-program-library

token-metadata/program/: Cargo.toml  README.md
token-metadata/program/src/: error.rs  lib.rs
token-metadata/program/src/assertions/: misc.rs
token-metadata/program/src/instruction/: metadata.rs  mod.rs
token-metadata/program/src/state/: collection.rs  creator.rs  data.rs  metadata.rs  mod.rs  uses.rs
token-metadata/program/src/utils/: metadata.rs
