[package]
name = "mpl-token-metadata"
version = "0.0.1"
description = "Forked Metaplex Metadata"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "=0.9.3"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "=1.10.31"
spl-token = { version = "=3.3.0", features = ["no-entrypoint"] }
thiserror = "1.0"